Rename Logging => LoggingService
And improve method naming within LoggingService and LoggingController
for greater clarity and consistency with the recently renamed
LoggingCategory model type. Note how the changes to LoggingController
methods cascade through to the generated client library and BisqCLI's
usage of it.
